--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "buefy": "^0.9.4",
     "core-js": "^3.6.5",
+    "firebase": "^8.4.1",
     "vue": "^2.6.11",
     "vue-router": "^3.5.1",
-    "vuejs-datatable": "^2.0.0-alpha.7"
+    "vuejs-datatable": "^2.0.0-alpha.7",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
